# python-anymod

./: .bumpversion.cfg  .isort.cfg  .travis.yml  README.md  pyproject.toml  tasks.py
anymod/: __init__.py  __version__.py  loaders.py  module.py
loader/: module.py
modular/: __init__.py  exceptions.py  loaders.py  publishers.py  util.py
tasks/: __init__.py  build.py  qa.py
tests/: __init__.py  conftest.py  mock_module-0.0.1-py3-none-any.whl  test_loaders.py  test_module.py  test_version.py
tests/mock_module/: module.py  module_class.py  setup.cfg
tests/mock_module/base/: example_base.py
tests/mock_module/mock_module/: module.py  module_class.py
tests/mock_module/mock_module/nested1/: module1.py
tests/modules/: module.py  module_class.py
tests/modules/base/: example_base.py
