[tool.poetry]
name = "python-proman-loader"
version = "0.1.0"
description = "Dynamic module loader"
authors = ["Jesse P. Johnson <jpj6652@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
invoke = "^1.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
