[tool.poetry]
name = "python-anymod"
version = "0.1.0"
description = "AnyMod - Dynamic module loader"
authors = ["Jesse P. Johnson <jpj6652@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
invoke = "^1.4.1"
mkdocs = "^1.1.2"
mkdocs-material = "^5.4.0"
pydocstyle = "^5.0.2"
isort = "4.3.21"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
