[tool.poetry]
name = "python-anymod"
version = "0.1.1-dev2"
description = "AnyMod - Dynamic module loader"
authors = ["Jesse P. Johnson <jpj6652@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
invoke = "^1.4.1"
mkdocs = "^1.1.2"
mkdocs-material = "^5.4.0"
pydocstyle = "^5.0.2"
isort = "4.3.21"
flake8 = "^3.8.3"
bump2version = "^1.0.0"
pytest = "^5.4.3"
flit = "^2.3.0"
pytest-cov = "^2.10.0"
pyfakefs = "^4.1.0"
mkdocstrings = "^0.12.1"
black = "^19.10b0"
mypy = "^0.782"

[tool.flit.metadata]
module = "anymod"
author = "Jesse P. Johnson"
author-email = "jpj6652@gmail.com"
home-page = "https://github.com/kuwv/anymod"

[tool.black]
line-length = 80
include = '\.pyi?$'
exclude = '''

(
  /(
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | _build
    | build
    | dist
  )
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
