[metadata]
name = mock_module
version = 0.0.1
description = mock module

[options]
packages = find:

[options.entry_points]
mock_module.config =
  mock_module_config = mock_module.config:Settings
mock_module.modules =
  modules = mock_module.module:EntryTest

# [files]
# data_files =
#   etc/mock_module.d = conf/*
# packages =
#   mock_module
# scripts =
#   bin/mock-module-exec
